--- a/src/main/webapp/frontend/src/Scss/navBar.scss
+++ b/src/main/webapp/frontend/src/Scss/navBar.scss
@@ -13,6 +13,10 @@
         margin-left: 10vw;
 
         align-items: center;
+
+        p:hover{
+         background-color: red;
+        }
     }
 
     .navBar_login{
